--- a/package.json
+++ b/package.json
@@ -42,15 +42,15 @@
   },
   "devDependencies": {
     "@basis-theory/eslint-config": "^1.2.0",
-    "@commitlint/cli": "^17.8.1",
-    "@commitlint/config-conventional": "^17.8.1",
+    "@commitlint/cli": "^18.6.0",
+    "@commitlint/config-conventional": "^18.6.0",
     "@parcel/packager-ts": "2.10.3",
     "@parcel/transformer-typescript-types": "2.10.3",
     "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/commit-analyzer": "^10.0.4",
+    "@semantic-release/commit-analyzer": "^11.1.0",
     "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^9.2.5",
-    "@semantic-release/npm": "^10.0.6",
+    "@semantic-release/github": "^9.2.6",
+    "@semantic-release/npm": "^11.0.2",
     "@semantic-release/release-notes-generator": "^11.0.7",
     "@types/jest": "^29.5.11",
     "@types/node": "^16.18.68",
@@ -62,9 +62,14 @@
     "prettier": "^2.8.8",
     "pretty-quick": "^3.1.3",
     "rimraf": "^5.0.5",
-    "semantic-release": "^21.1.2",
+    "semantic-release": "^23.0.0",
     "ts-jest": "^29.1.1",
     "typescript": "^4.9.5"
+  },
+  "resolutions": {
+    "@babel/traverse": "^7.23.2",
+    "msgpackr": "^1.10.1",
+    "semver": "^7.5.4"
   },
   "publishConfig": {
     "access": "public"
